improve layout spaces

--- a/styles.scss
+++ b/styles.scss
@@ -21,6 +21,6 @@ $presentation-font-size-root: 30px;
     font-size: 0.85em;
 }
 
-#vcenter {
-    vertical-align: middle;
-  }
+ul{
+    padding-left: 1em;
+}
